manifests/openunison-k8s-oidc-1.0.5.tgz-manifest.yaml
---
# Source: openunison-k8s-oidc/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: default
spec:
  podSelector: {}
  policyTypes:
  - Ingress
---
# Source: openunison-k8s-oidc/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openunison-to-activemq
  namespace: default
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: default
  podSelector:
    matchLabels:
      app: amq-my-release
  policyTypes:
  - Ingress
---
# Source: openunison-k8s-oidc/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-ingress
  namespace: default
spec:
  podSelector:
    matchLabels:
      application: openunison-my-release
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
            app.kubernetes.io/name: ingress-nginx
        
  policyTypes:
  - Ingress
---
# Source: openunison-k8s-oidc/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-prometheus
  namespace: default
spec:
  podSelector:
    matchLabels:
      application: openunison-my-release
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
            app.kubernetes.io/name: monitoring
        
  policyTypes:
  - Ingress
---
# Source: openunison-k8s-oidc/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-apiserver
  namespace: default
spec:
  podSelector:
    matchLabels:
      application: openunison-my-release
  ingress:
  - from:
    - namespaceSelector:
        matchLabels: 
            app.kubernetes.io/name: kube-system
        
  policyTypes:
  - Ingress
---
# Source: openunison-k8s-oidc/templates/openunison.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "openunison-workflow-validation"
webhooks:
- name: "workflows-openunison.tremolo.io"
  rules:
  - apiGroups:   ["openunison.tremolo.io"]
    apiVersions: ["v1"]
    operations:  ["CREATE","UPDATE"]
    resources:   ["workflows"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: default
      name: "openunison-my-release"
      path: /k8s/webhooks/v1/workflows
    caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVGekNDQXYrZ0F3SUJBZ0lHQVhWWU5KTXhNQTBHQ1NxR1NJYjNEUUVCQ3dVQU1JR1hNUkl3RUFZRFZRUUcNCkV3bE5lVU52ZFc1MGNua3hHVEFYQmdOVkJBZ1RFRk4wWVhSbElHOW1JRU5zZFhOMFpYSXhFekFSQmdOVkJBY1QNCkNrMTVJRU5zZFhOMFpYSXhEakFNQmdOVkJBb1RCVTE1VDNKbk1STXdFUVlEVlFRTEV3cExkV0psY201bGRHVnoNCk1Td3dLZ1lEVlFRREV5TnZjR1Z1ZFc1cGMyOXVMVzl5WTJobGMzUnlZUzV2Y0dWdWRXNXBjMjl1TG5OMll6QWUNCkZ3MHlNREV3TWpRd01USTBNREZhRncweU1URXdNalF3TVRJME1ERmFNSUdYTVJJd0VBWURWUVFHRXdsTmVVTnYNCmRXNTBjb [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 5
